# dcap-cairo

./: .gitignore  Cargo.toml  README  README.md  Scarb.toml  repomix-output.txt
contract/: Scarb.toml
contract/src/: lib.cairo
contract/tests/: test_contract.cairo
crates/macros/: Cargo.toml  Scarb.toml
crates/macros/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  types.rs
crates/preprocess/: Cargo.toml
crates/preprocess/src/: parser.rs  types.rs
crates/tdx-cairo-cli/: Cargo.toml
crates/tdx-cairo-cli/src/: cairo_runner.rs  main.rs
dcap-cairo/: Scarb.toml
dcap-cairo/src/: common.cairo  constants.cairo  lib.cairo  types.cairo
dcap-cairo/src/common/: crypto.cairo
scripts/gen_test_data/: Cargo.toml  test_data.txt
scripts/gen_test_data/src/: main.rs
src/: common.cairo  lib.cairo  quotes.cairo  types.cairo
src/common/: bytes.cairo  sha256.cairo
src/quotes/: v4.cairo
src/types/: cert.cairo  collaterals.cairo  quotes.cairo
src/types/quotes/: body.cairo  v4.cairo
tests/: test_contract.cairo
