[package]
name = "tdx_macros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cairo-lang-macro = "0.1"
cairo-lang-parser = "2.7.0"
cairo-lang-syntax = "2.7.0"
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", rev = "bd86987" }
preprocess = { path = "../preprocess" }
