[package]
name = "tdx-cairo-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
parser = {path = "../parser"}
dcap-rs.workspace = true
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm", rev = "0d86936" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "0d86936", features = [
    "std",
    "cairo-1-hints",
] }
cairo-lang-sierra = { version = "2.9.0-dev.0", default-features = false }
serde_json = "1.0.133"
